--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 </nav>
 
 <!--Showcase-->
-<section class="bg-img text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+<section class="bg-img text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-center">
     <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-between">
+        <div class="d-sm-flex align-items-center justify-space-between">
             <div>
-                <p class="lead my-5 text-body-secondary">Welcome to NaphStore, your ultimate destination for seamless online shopping. Explore a world of quality products, unbeatable deals, and unparalleled convenience. Start your journey with us today!</p>
-                <a href="store.html"><button class="btn btn-secondary btn-lg mb-3">Visit Our Store</button></a>
+                <p class="lead my-5 text-dark"> Welcome to NaphStore, your ultimate destination for seamless online shopping. Explore a world of quality products, unbeatable deals, and unparalleled convenience. Start your journey with us today!</p>
+                <a href="store.html"><button class="btn btn-secondary btn-lg mt-5">Visit Our Store</button></a>
             </div>
            <!-- <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti tempora labore magnam officia velit quasi sint solut </p>
@@ -53,14 +53,14 @@
 
 
 <!--News letter-->
-<section class="bg-dark text-light p-3 ">
+<section class="S-up bg-dark text-light p-3 p-lg-1 ">
     <div class="container">
         <div class="d-md-flex justify-content-between align-items-center">
-            <h2 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h2>
+            <h2 class="mb-3 mb-md-1 align-items-center">Sign Up For Our Newsletter</h2>
 
             <div class="input-group news-input">
                 <input type="text" class="form-control"  
-                placeholder="Enterr Email">
+                placeholder="Enter Email">
                 <button 
                 class="btn btn-secondary btn-lg" 
                 type="button">Sign Up</button>
