--- a/store.html
+++ b/store.html
@@ -23,7 +23,7 @@
         <span class="span navbar-toggler-icon"></span>    </button>
     <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto  ">
-            <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#home" class="nav-link">Home </a></li>
             <li class="nav-item"><a href="#About" class="nav-link">About Us</a></li>
             <li class="nav-item"><a href="#Services" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">Contact Us</a></li>
@@ -104,7 +104,7 @@
             <div class="card bg-dark mb-3">
                 <div class="card-body text-center">
                    
-                    <h2 class="card-title mb-3 ">Apple Electical Pressing Iron</h2>
+                    <h2 class="card-title mb-3 ">Electical Pressing Iron</h2>
                     <img src="img/elec1.jpeg" alt="">
                     <button class="btn btn-secondary btn-lg m-3">Purchase</button>
                 </div>
@@ -154,7 +154,7 @@
             <div class="card bg-dark mb-3">
                 <div class="card-body text-center">
                    
-                    <h2 class="card-title mb-3 ">Set Of Kittchen Utensils</h2>
+                    <h2 class="card-title mb-3 ">Set Of Kitchen Utensils</h2>
                     <img src="img/kit1.jpeg" alt="">
                     <button class="btn btn-secondary btn-lg m-3">Purchase</button>
                 </div>
